# valentine-checker

./: README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  main.py  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: app.vue
nginx/: nginx.conf
