[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Klimentsi Katsko",email = "cileron1305@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.8,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
