[tool.poetry]
name = "valentine-backend"
version = "0.1.0"
description = "Valentine App Backend"
authors = ["Klimentsi Katsko cileron1305@gmail.com"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"